hard-gists/6404683/run.log
=== Docker Run Log for 6404683 ===
Started at: Mi 29. Okt 16:30:24 CET 2025

[2025-10-29 16:30:24] START: Running container for 6404683
[2025-10-29 16:30:24] SUCCESS: Container 7023b76c6b23cda6a5f626ca73f5f3eb0913e395ebf4a52ece3dfd90bda2bb1c started for 6404683
=== Container logs for 6404683 ===
  File "/snippet.py", line 36
    if debug: print 'referer_url: %s' % referer_url
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6404683 ===
[2025-10-29 16:30:26] INFO: Container 7023b76c6b23cda6a5f626ca73f5f3eb0913e395ebf4a52ece3dfd90bda2bb1c has stopped
